# Project-Assignment-CSS

./: .gitignore  ProjectAssignmentA.ipynb  ProjectAssignmentB.ipynb  README.md  index.html  main.py  part-a.html  part-b.html  pyproject.toml
.claude/: settings.local.json
